k8s/overlays/shokohsc/api/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
spec:
  template:
    spec:
      containers:
        - name: api
          image: shokohsc/moleculer-ouistity
          args:
            - --hot
            - services/api-gateway.service.js
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: nfs-shared
              mountPath: /usr/app/assets/data/archives/weekly
            - name: nfs-zarya
              mountPath: /usr/app/assets/data/archives/comics
      volumes:
        - name: temp
          emptyDir:
            medium: Memory
        - name: nfs-shared
          nfs:
            server: nfs-shared.nfs-shared.svc.cluster.local
            path: /weekly
            readOnly: true
        - name: nfs-zarya
          nfs:
            server: nfs-wd-zarya.nfs-wd-zarya.svc.cluster.local
            path: /comics
            readOnly: true
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - api
                  - archives
                  - books
                  - graphql
                  - pages
              topologyKey: kubernetes.io/hostname
