k8s/overlays/shokohsc/api/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: dev
    forecastle.stakater.com/appName: api
spec:
  rules:
  - host: api.ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 5000
  tls:
  - hosts:
    - api.ouistity.shokohsc.home
    secretName: api-cert
